# ESPresso-Client-RPi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  lv_conf.h
simulator/: CMakeLists.txt  lv_conf.h  main.cpp
src/: lv_conf.h  main.cpp
src/boiler/: .BoilerController.cpp.swo  BoilerController.cpp  BoilerController.hpp
src/scales/: ScalesController.cpp  ScalesController.hpp
